--- a/index.html
+++ b/index.html
@@ -60,6 +60,21 @@
         <!-- End Hero Section -->
 
 
+        <!-- Start Feactued In Section -->
+        <section class="section-feacture">
+            <div class="container">
+                <h2 class="heading-feature-in">As Feature in</h2>
+                <div class="logos">
+                    <img src="./img/logos/techcrunch.png" class="" alt="techcrunch">
+                    <img src="./img/logos/business-insider.png" class="" alt="business-insider">
+                    <img src="./img/logos/the-new-york-times.png" class="" alt="The New York Times"/>
+                    <img src="./img/logos/forbes.png" class="" alt="forbes">
+                    <img src="./img/logos/usa-today.png" class="" alt="usa-today">
+                </div>
+            </div>
+        </section>
+        <!-- End Feactured In Seciton -->
+
         <!-- Start Section How  -->
         <section class="section-how">
             <div class="container">
