--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Ominifood</title>
+    <link rel="stylesheet" href="./css/general.css">
     <link rel="stylesheet" href="./css/style.css">
 </head>
 <body>
@@ -126,6 +127,120 @@
         </section>
         <!-- End Section How  -->
 
+
+        <!-- Start Meal Section -->
+        <section class="section-meals">
+            <div class="container">
+                <span class="sub-heading center-text">
+                    Meals
+                </span>
+                <h2 class="heading-secondary center-text">Omnifood AI chooses from 5,000+ recipes</h2>
+                <div class="container grid grid--3--cols margin-bottom-md">
+                    <div class="meal">
+                        <img src="./img/meals/meal-1.jpg" class="meal-img" alt="Japanese Gyozas"/>
+                        
+
+                        <div class="meal-content">
+                            <p class="meal-title">Japanese Gyozas</p>
+                            <div class="tags">
+                                <span class="tag tag--vegetarian">Vegetarian</span>
+                            </div>
+                            <ul class="meal-attributes">
+                                <li class="meal-attribute">
+                                    <span><ion-icon class="meal-icon" name="flame-outline"></ion-icon></span>
+                                    <strong>650</strong> calories</li>
+                                <li class="meal-attribute">
+                                    <span><ion-icon class="meal-icon" name="restaurant-outline"></ion-icon></span>
+                                    NutriScore &reg; <strong>74</strong>
+                                </li>
+                                <li class="meal-attribute">
+                                    <span><ion-icon  class="meal-icon" name="star-outline"></ion-icon></span>
+                                    <strong>4.9</strong> rating (537)
+                                </li>
+                            </ul>
+                        </div>
+                    </div>
+                    <div class="meal">
+                        <img src="./img/meals/meal-2.jpg" class="meal-img" alt="Japanese Gyozas"/>
+                        
+
+                        <div class="meal-content">
+                            <p class="meal-title">Avocado Salad</p>
+                            <div class="tags">
+                                <span class="tag tag--vegan">Vegan</span>
+                                <span class="tag tag--paleo">Paleo</span>
+                            </div>
+                            <ul class="meal-attributes">
+                                <li class="meal-attribute">
+                                    <span><ion-icon class="meal-icon" name="flame-outline"></ion-icon></span>
+                                    <strong>400</strong> calories</li>
+                                <li class="meal-attribute">
+                                    <span><ion-icon class="meal-icon" name="restaurant-outline"></ion-icon></span>
+                                    NutriScore &reg; <strong>92</strong>
+                                </li>
+                                <li class="meal-attribute">
+                                    <span><ion-icon  class="meal-icon" name="star-outline"></ion-icon></span>
+                                    <strong>4.8</strong> rating (441)
+                                </li>
+                            </ul>
+                        </div>
+                    </div>
+                    <div class="diet">
+                        <h3 class="heading-tertiary"> Works with any diet</h3>
+                        <ul class="list">
+                            <li class="list-item">
+                                <ion-icon class="list-icon" name="checkmark-outline"></ion-icon>
+                                <span>Vegetarian</span>
+                            </li>
+                            <li class="list-item">
+                                <ion-icon class="list-icon" name="checkmark-outline"></ion-icon>
+                                <span>Vegan</span>
+                            </li>
+                            <li class="list-item">
+                                <ion-icon class="list-icon" name="checkmark-outline"></ion-icon>
+                                <span>Pescatarian</span>
+                            </li>
+                            <li class="list-item">
+                                <ion-icon class="list-icon" name="checkmark-outline"></ion-icon>
+                                <span>Gluten-free</span>
+                            </li>
+                            <li class="list-item">
+                                <ion-icon class="list-icon" name="checkmark-outline"></ion-icon>
+                                <span>Lactose-free</span>
+                            </li>
+                            <li class="list-item">
+                                <ion-icon class="list-icon" name="checkmark-outline"></ion-icon>
+                                <span>Keto</span>
+                            </li>
+                            <li class="list-item">
+                                <ion-icon class="list-icon" name="checkmark-outline"></ion-icon>
+                                <span>Paleo</span>
+                            </li>
+                            <li class="list-item">
+                                <ion-icon class="list-icon" name="checkmark-outline"></ion-icon>
+
+                                <span>Low FODMAP</span>
+                            </li>
+                            <li class="list-item">
+                                <ion-icon class="list-icon" name="checkmark-outline"></ion-icon>
+                                <span>Kid-friendly</span>
+                            </li>
+                        </ul>
+                    </div>
+                </div>
+
+                <div class="container all-recipes">
+                    <a href="javascript:void();" class="link">See all recipes -></a>
+                </div>
+            </div>
+        </section>
+        <!-- End Meal Section -->
+
     </main>
+
+
+    <!-- Ionicons Links -->
+    <script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
+    <script nomodule src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"></script>
 </body>
 </html>
