--- a/index.html
+++ b/index.html
@@ -462,7 +462,114 @@
             </div>
         </section>
         <!-- End Pricing Section -->
+
+        <section class="section-cta">
+            <div class="container">
+                <div class="cta">
+                    <div class="cta-text-box">
+                        <h2 class="heading-secondary">Get your first meal for free!</h2>
+                        <p class="cta-text">
+                            Healthy, tasty and hassle-free meals are waiting for you. Start eating well today. You can cancel or pause anytime. And the first meal is on us!
+                        </p>
+
+                        <form class="cta-form" action="#" method="">
+                            <div>
+                                <label for="full-name">Full Name</label>
+                                <input type="text" class="" id="full-name" name="full-name" placeholder="Jhon Smit" required>
+                            </div>
+
+                            <div>
+                                <label for="for-email">Your Email</label>
+                                <input type="email" id="for-email" name="for-email" class="" placeholder="me@example.com" required>
+                            </div>
+
+                            <div>
+                                <label name="" for="select-where">Where did you hear from us?</label>
+                                <select name="select-where" id="select-where">
+                                    <option value="Place Choose One " selected disabled>Please Choose one option:</option>
+                                    <option value="friends ">Friends and Family</option>
+                                    <option value="yu">Youtube Video</option>
+                                    <option value="Podcse">Podcast</option>
+                                    <option value="fb">Facebook Ads</option>
+                                    <option value="ot">Others</option>
+                                </select>
+                            </div>
+
+                            <button type="submit" class="btn btn-form">Sign Up Now</button>
+                        </form>
+                    </div>
+    
+                    <div class="cta-img-box " role="img" aria-label="Women Enjoy Food">
+    
+                    </div>
+                </div>
+            </div>
+        </section>
     </main>
+
+
+    <footer class="footer">
+        <div class="container grid grid--footer">
+            <div class="logo-col">
+                <a href="#" class="footer-logo">
+                    <img src="./img/omnifood-logo.png" alt="Ominifood Logo" class="logo">
+                </a>
+
+                <ul class="social-link">
+                    <li class="footer-link"><a class="footer-logo" href="#"><ion-icon class="social-icon" name="logo-instagram"></ion-icon></a></li>
+                    <li class="footer-link"><a class="footer-logo" href="#"><ion-icon class="social-icon" name="logo-facebook"></ion-icon></a></li>
+                    <li class="footer-link"><a class="footer-logo" href="#"><ion-icon class="social-icon" name="logo-twitter"></ion-icon></a></li>
+                </ul>
+                <p class="copyright">
+                    Copyright &copy; 2022 by Ominifood ,inc. All right reverse
+                </p>
+            </div>
+
+            <div class="address-col">
+                <p class="footer-heading">Contact Us</p>
+
+                <address class="contact">
+                    <p class="address">623 Harrison St., 2nd Floor, San Francisco, CA 94107</p>
+                    <p>
+                        <a class="footer-link" href="tel:415-201-6370">415-201-6370</a>
+                        <br>
+                        <a class="footer-link" href="mailto:hello@ominifood.com">hello@ominifood.com</a>
+                    </p>
+                </address>
+            </div>
+
+            <div class="nav-col">
+                <p class="footer-heading">Account</p>
+                <ul class="footer-nav">
+                    <li><a class="footer-link" href="#">Create Account</a></li>
+                    <li><a class="footer-link" href="#">Sign in</a></li>
+                    <li><a class="footer-link" href="#">iOS app</a></li>
+                    <li><a class="footer-link" href="#">Android app</a></li>
+                </ul>
+            </div>
+
+            <div class="nav-col">
+                <p class="footer-heading">Company</p>
+                <ul class="footer-nav">
+                    <li><a class="footer-link" href="#">About Omnifood</a></li>
+                    <li><a class="footer-link" href="#">For Business</a></li>
+                    <li><a class="footer-link" href="#">Cooking partners</a></li>
+                    <li><a class="footer-link" href="#">Careers</a></li>
+                </ul>
+            </div>
+
+            <div class="nav-col">
+                <p class="footer-heading">Resources</p>
+                <ul class="footer-nav">
+                    <li><a class="footer-link" href="#">Recipe directory</a></li>
+                    <li><a class="footer-link" href="#">Help center</a></li>
+                    <li><a class="footer-link" href="#">Privacy & terms</a></li>
+                </ul>
+            </div>
+
+
+        </div>
+    </footer>
 
 
     <!-- Ionicons Links -->
